# GDIVIR

./: .gitignore  pyproject.toml
gdivir/data_cleaner/: __init__.py  census_results.py  common.py  general.py
gdivir/internal_data/datasets/hbsir/: counties.csv  provinces.csv
gdivir/matchmaker/: __init__.py  common.py  county.py  province.py
gdivir/metadata/: external_datasets.yaml  raw_files.yaml  tables.yaml
gdivir/results/: county.py  hbsir.py
gdivir/utils/: download_utils.py  metadata_reader.py  metadata_utils.py
results/: county_many_to_one_mapping.yaml  county_one_to_one_mapping_table.csv  hbsir_standard_county_mapping.yaml  hbsir_standard_province_mapping.yaml
src/gdivir/: __init__.py  data_handler.py
src/gdivir/config/: settings.yaml
src/gdivir/data_cleaner/: __init__.py  census_results.py  general.py  geographical_divisions.py
src/gdivir/internal_data/results/: 00_counties_versions.csv  01_counties_versions.csv  02_counties_versions.csv  03_counties_versions.csv  04_counties_versions.csv  05_counties_versions.csv  06_counties_versions.csv  07_counties_versions.csv  08_counties_versions.csv  09_counties_versions.csv  10_counties_versions.csv  11_counties_versions.csv  12_counties_versions.csv  13_counties_versions.csv  14_counties_versions.csv  15_counties_versions.csv  16_counties_versions.csv  17_counties_versions.csv  18_counties_versions.csv  19_counties_versions.csv  (+12 more)
src/gdivir/matchmaker/: version_handler.py
src/gdivir/metadata/: standard_names.yaml
src/gdivir/results/: county.py
src/gdivir/utils/: __init__.py  metadata_reader.py
